--- a/pubsub/java/subscriber/pom.xml
+++ b/pubsub/java/subscriber/pom.xml
@@ -11,7 +11,7 @@
   </parent>
   <groupId>com.service</groupId>
   <artifactId>subscriber</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>subscriber</name>
   <description>Catalyst Pubsub Quickstart: Subscriber</description>
   <properties>
@@ -29,18 +29,23 @@
     <dependency>
       <groupId>io.dapr</groupId>
       <artifactId>dapr-sdk-springboot</artifactId>
-      <version>1.12.1</version>
+      <version>1.16.0</version>
     </dependency>
     <dependency>
       <groupId>io.dapr</groupId>
       <artifactId>dapr-sdk</artifactId>
-      <version>1.12.1</version>
+      <version>1.16.0</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.30</version>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20240303</version>
     </dependency>
   </dependencies>
   <build>
