--- a/invocation/java/dev-java-invocation.yaml
+++ b/invocation/java/dev-java-invocation.yaml
@@ -1,40 +1,41 @@
 version: 1
 common:
-    appLogDestination: console
-    enableAppHealthCheck: false
+  appLogDestination: console
+  enableAppHealthCheck:
+    false
+    # appHealthCheckPath: /healthz
+    # appHealthProbeInterval: 5
+    # appHealthProbeTimeout: 500
+    # appHealthThreshold: 3
+apps:
+  - appID: client
+    appDirPath: ./client
+    command:
+      - mvn
+      - spring-boot:run
+      - -Dspring-boot.run.arguments=--port=5001
+    appProtocol: http
+    logLevel: info
+    enableAppHealthCheck:
+      false
       # appHealthCheckPath: /healthz
       # appHealthProbeInterval: 5
       # appHealthProbeTimeout: 500
       # appHealthThreshold: 3
-apps:
-    - appID: client
-      appDirPath: ./client
-      command:
-      - java
-      - -jar
-      - target/client-0.0.1-SNAPSHOT.jar 
-      - --port=5001
-      appProtocol: http
-      logLevel: info
-      enableAppHealthCheck: false
-        # appHealthCheckPath: /healthz
-        # appHealthProbeInterval: 5
-        # appHealthProbeTimeout: 500
-        # appHealthThreshold: 3
-      appLogDestination: console
-    - appID: server
-      appDirPath: ./server
-      appPort: 5002
-      command:
-      - java
-      - -jar
-      - target/server-0.0.1-SNAPSHOT.jar 
-      - --port=5002
-      appProtocol: http
-      logLevel: info
-      enableAppHealthCheck: false
-        # appHealthCheckPath: /healthz
-        # appHealthProbeInterval: 5
-        # appHealthProbeTimeout: 500
-        # appHealthThreshold: 3
-      appLogDestination: console
+    appLogDestination: console
+  - appID: server
+    appDirPath: ./server
+    appPort: 5002
+    command:
+      - mvn
+      - spring-boot:run
+      - -Dspring-boot.run.arguments=--port=5002
+    appProtocol: http
+    logLevel: info
+    enableAppHealthCheck:
+      false
+      # appHealthCheckPath: /healthz
+      # appHealthProbeInterval: 5
+      # appHealthProbeTimeout: 500
+      # appHealthThreshold: 3
+    appLogDestination: console
