--- a/invocation/javascript/server/package.json
+++ b/invocation/javascript/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@dapr/dapr": "^3.5.2",
-    "axios": "^1.8.2",
-    "body-parser": "^1.20.3",
-    "express": "^4.21.0",
-    "send": "^0.19.0",
-    "serve-static": "^1.16.2"
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0"
   }
 }
