--- a/workflow/csharp/WorkflowApp.csproj
+++ b/workflow/csharp/WorkflowApp.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Dapr.Client" Version="1.16.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.16.0" />
     <PackageReference Include="Dapr.Workflow" Version="1.16.0" />
   </ItemGroup>
 
