fix: align pubsub component with dapr-agents quickstarter
Signed-off-by: Casper Nielsen <casper@diagrid.io>

--- a/durable-agent/python/resources/pubsub.yaml
+++ b/durable-agent/python/resources/pubsub.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: pubsub
+  name: messagepubsub
 spec:
   type: pubsub.redis
   version: v1
@@ -9,7 +9,7 @@ spec:
     - name: redisHost
       value: localhost:6379
     - name: redisPassword
-      value: "foo"
+      value: ""
     - name: consumerID
       value: "travel-planner-group"
     - name: enableTLS
