--- a/durable-agent/python/resources/openai.yaml
+++ b/durable-agent/python/resources/openai.yaml
@@ -6,7 +6,9 @@ spec:
   type: conversation.openai
   version: v1
   metadata:
-    - name: key
-      value: YOUR_OPENAI_API_KEY
-    - name: model
-      value: gpt-4.1-2025-04-14
+  - name: key
+    value: "{{OPENAI_API_KEY}}"
+  - name: model
+    value: gpt-5-2025-08-07
+  - name: temperature
+    value: 1
