fix: decrease amount of components & add actor store for registry store
Signed-off-by: Casper Nielsen <casper@diagrid.io>

--- a/durable-agent/python/resources/statestore.yaml
+++ b/durable-agent/python/resources/statestore.yaml
@@ -12,5 +12,7 @@ spec:
     value: ""
   - name: enableTLS
     value: "false"
+  - name: actorStateStore
+    value: "true"
   - name: keyPrefix
     value: none
