--- a/multi-agent-workflow/python/resources/llm-provider.yaml
+++ b/multi-agent-workflow/python/resources/llm-provider.yaml
@@ -1,12 +1,12 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: openai
+  name: llm-provider
 spec:
   type: conversation.openai
   version: v1
   metadata:
     - name: key
-      value: YOUR_OPENAI_API_KEY
+      value: "{{OPENAI_API_KEY}}"
     - name: model
       value: gpt-4.1-2025-04-14
