--- a/durable-agent/python/resources/agent-pubsub.yaml
+++ b/durable-agent/python/resources/agent-pubsub.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: pubsub
+  name: agent-pubsub
 spec:
   type: pubsub.redis
   version: v1
