--- a/durable-agent/python/resources/agent-statestore.yaml
+++ b/durable-agent/python/resources/agent-statestore.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: statestore
+  name: agent-statestore
 spec:
   type: state.redis
   version: v1
@@ -10,9 +10,5 @@ spec:
     value: localhost:6379
   - name: redisPassword
     value: ""
-  - name: enableTLS
-    value: "false"
   - name: actorStateStore
-    value: "true"
-  - name: keyPrefix
-    value: none
+    value: "false"
