--- a/durable-agent/python/resources/agent-statestore.yaml
+++ b/durable-agent/python/resources/agent-statestore.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: agent-statestore
+  name: agent-memory
 spec:
   type: state.redis
   version: v1
