--- a/durable-agent/python/resources/agent-llm-provider.yaml
+++ b/durable-agent/python/resources/agent-llm-provider.yaml
@@ -1,12 +1,12 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: llm-provider
+  name: agent-llm-provider
 spec:
   type: conversation.openai
   version: v1
   metadata:
     - name: key
-      value: "{{OPENAI_API_KEY}}"
+      value: "YOUR_OPENAI_API_KEY"
     - name: model
       value: gpt-4.1-2025-04-14
