feat: add orchestrator and convert other agents to be part of orchestration
Signed-off-by: Casper Nielsen <casper@diagrid.io>

--- a/agents/dapr-agents/durable-agent/dev-python-durable-agent.yaml
+++ b/agents/dapr-agents/durable-agent/dev-python-durable-agent.yaml
@@ -5,9 +5,8 @@ common:
   enableAppHealthCheck: false
   logLevel: info
 apps:
-  - appID: travel-assistant-agent
+  - appID: dapr-agent
     appDirPath: ./
-    appPort: 5001
+    appPort: 8006
     appProtocol: http
     command: ["python", "main.py"]
-
