--- a/agents/dapr-agents/orchestrator/dev-python-orchestrator.yaml
+++ b/agents/dapr-agents/orchestrator/dev-python-orchestrator.yaml
@@ -5,11 +5,8 @@ common:
   enableAppHealthCheck: false
   logLevel: info
 apps:
-  - appID: strands-agent
+  - appID: event-orchestrator
     appDirPath: ./
-    appPort: 8888
+    appPort: 8007
     appProtocol: http
     command: ["python", "main.py"]
-    env:
-      APP_PORT: "8888"
-
