--- a/agents/dapr-agents/durable-agent/Dockerfile
+++ b/agents/dapr-agents/durable-agent/Dockerfile
@@ -1,26 +1,11 @@
-# Use the official Python base image
-FROM python:3.12-alpine
-
-# Set the working directory inside the container
+FROM python:3.12-slim
 WORKDIR /app
-
-# Expose the port on which the application will run
 EXPOSE 5001
-
-# Copy requirements first so Docker cache is efficient
 COPY requirements.txt .
-
-# Install build deps, pip install and clean up
-RUN apk add --no-cache --virtual .build-deps \
-  build-base linux-headers \
-  && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-deps
-
-# Copy the rest of the application code
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends build-essential \
+    && pip install -r requirements.txt \
+    && apt-get purge -y --auto-remove build-essential \
+    && rm -rf /var/lib/apt/lists/*
 COPY . .
-
-
-
-# Run the Durable Agent
 CMD ["python", "main.py"]
-
