--- a/agents/langgraph/Dockerfile
+++ b/agents/langgraph/Dockerfile
@@ -1,9 +1,8 @@
-FROM python:3.12-alpine
+ARG BASE_IMAGE=python:3.12-slim
+FROM ${BASE_IMAGE}
 WORKDIR /app
 EXPOSE 5001
 COPY requirements.txt .
-RUN apk add --no-cache --virtual .build-deps build-base linux-headers \
-    && pip install --no-cache-dir -r requirements.txt \
-    && apk del .build-deps
+RUN pip install -r requirements.txt
 COPY . .
 CMD ["python", "main.py"]
