--- a/pubsub/javascript/subscriber/package.json
+++ b/pubsub/javascript/subscriber/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "qs": "^6.14.1"
   }
 }
