--- a/state/javascript/package.json
+++ b/state/javascript/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@dapr/dapr": "^3.6.1",
     "body-parser": "^1.20.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "qs": "^6.14.1"
   }
 }
